# pbuildrs

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
example/: .gitignore  Cargo.toml
example/src/: lib.rs
proto/: orphan.proto
proto/crabs/: CrabService.proto  Ferris.proto
proto/crabs/disney/ariel/: Sebastian.proto
proto/crabs/sponge_bob/: BetsyKrabs.proto  MrKrabs.proto
src/: cli.rs  lib.rs  main.rs  modgen.rs  patcher.rs
