[package]
name = "pbuildrs"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", default-features = false, features = [
	"derive",
	"help",
	"std",
	"usage",
] }
rayon = { version = "1.11.0", default-features = false }
tempfile = { version = "3.24.0", default-features = false }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
tonic-prost-build = "0.14.3"
walkdir = { version = "2.5.0", default-features = false }

[dev-dependencies]
prost = { version = "0.14.3", default-features = false }

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
